--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,23 @@
+body {
+  font-family: "Lora", "Playfair Display", "Nunito", sans;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Lora", "Merriweather", sans;
+}
+
 .section_hero {
-  background-image: url("/assets/images/hero.jpg");
+  background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.4)),
+    url("/assets/images/hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 
   min-height: calc(100dvh - 60px);
-  padding-top: 74px;
+  padding-top: 50px;
 }
