--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,6 @@ h6 {
   background-size: cover;
   background-position: center;
 
-  min-height: calc(100dvh - 60px);
-  padding-top: 50px;
+  min-height: calc(100dvh);
+  padding-top: 72px;
 }
