--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2311,9 +2311,9 @@ progress {
 .form-control:focus {
   color: var(--bs-body-color);
   background-color: var(--bs-body-bg);
-  border-color: #86b7fe;
+  border-color: rgba(62, 59, 54, 0.15);
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(62, 59, 54, 0.15);
 }
 .form-control::-webkit-date-and-time-value {
   min-width: 85px;
