--- a/css/styles.css
+++ b/css/styles.css
@@ -80,5 +80,42 @@ h6 {
 }
 
 .section-contact {
+  min-height: 79.2dvh;
   padding-top: 82px;
+}
+
+.btn-width-form {
+  max-width: 10rem;
+  width: 100%;
+}
+
+.textarea-form {
+  resize: none;
+  overflow-y: auto;
+}
+
+/* width */
+.textarea-form::-webkit-scrollbar {
+  width: 10px;
+  transition: all 0.4s;
+}
+
+/* Track */
+.textarea-form::-webkit-scrollbar-track {
+  background: transparent;
+  transition: all 0.4s;
+}
+
+/* Handle */
+.textarea-form::-webkit-scrollbar-thumb {
+  background: #8c7153;
+  border-radius: 4px;
+  border: none;
+  transition: all 0.4s;
+}
+
+/* Handle on hover */
+.textarea-form::-webkit-scrollbar-thumb:hover {
+  background: #72593e;
+  cursor: pointer;
 }
