--- a/css/styles.css
+++ b/css/styles.css
@@ -131,12 +131,15 @@ p {
   position: absolute;
   content: "";
   clip-path: circle(37% at 50% 50%);
+
+  width: 100%;
 }
 
 .img-custom-1 {
   top: -50px;
   left: 125px;
 }
+
 .img-custom-2 {
   top: 0;
   left: -100px;
@@ -154,15 +157,73 @@ p {
   }
 }
 
+@media screen and (max-width: 1400px) {
+  .img-custom {
+    position: absolute;
+    content: "";
+    clip-path: circle(30% at 50% 50%);
+
+    width: 100%;
+  }
+
+  .img-custom-1 {
+    top: -50px;
+    left: 125px;
+  }
+
+  .img-custom-2 {
+    top: -15px;
+    left: -100px;
+  }
+}
+
 @media screen and (max-width: 1200px) {
   .container-contact {
     border-left: 0 !important;
     border-right: 0 !important;
     border-radius: 0 !important;
   }
+
+  .img-custom {
+    position: absolute;
+    content: "";
+    clip-path: circle(32.5% at 50% 50%);
+
+    width: 100%;
+  }
+
+  .img-custom-1 {
+    top: 0px;
+    left: 125px;
+  }
+
+  .img-custom-2 {
+    top: -30px;
+    left: -100px;
+  }
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1120px) {
+  .img-custom {
+    position: absolute;
+    content: "";
+    clip-path: circle(32.5% at 50% 50%);
+
+    width: 100%;
+  }
+
+  .img-custom-1 {
+    top: 50px;
+    left: 125px;
+  }
+
+  .img-custom-2 {
+    top: 0px;
+    left: -100px;
+  }
+}
+
+@media screen and (max-width: 991px) {
   .jumpbadge-background {
     background-image: linear-gradient(
         110deg,
@@ -185,12 +246,73 @@ p {
   .row-ourstory {
     flex-direction: column-reverse;
   }
+
+  .position-relative {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    margin-top: 1rem;
+
+    gap: 1rem;
+  }
+
+  .img-custom {
+    position: unset;
+    content: "";
+    clip-path: none;
+    border-radius: 6px;
+
+    width: 47.5%;
+  }
+
+  .img-custom-1 {
+    top: unset;
+    left: unset;
+  }
+
+  .img-custom-2 {
+    top: unset;
+    left: unset;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .dog-card.card {
     max-width: 367.5px;
     margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 675px) {
+  .position-relative {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    margin-top: 1rem;
+
+    gap: 1rem;
+  }
+
+  .img-custom {
+    position: unset;
+    content: "";
+    clip-path: none;
+    border-radius: 6px;
+
+    width: 100%;
+  }
+
+  .img-custom-1 {
+    top: unset;
+    left: unset;
+  }
+
+  .img-custom-2 {
+    top: unset;
+    left: unset;
   }
 }
 
